--- a/HomeworkConsoleGame/HomeworkConsoleGame.csproj
+++ b/HomeworkConsoleGame/HomeworkConsoleGame.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Authors>TheSameFail</Authors>
+    <BaseOutputPath></BaseOutputPath>
   </PropertyGroup>
 
 </Project>
